text alignment fixed

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,7 @@
+.rated-players {
+    text-align: center;
+}
+
 .thumbnail {
     height: 150px;
 }
